# multimodal-reward-learning

./: .gitignore  .tmuxinator.yml  Dockerfile  README.md  build_env.sh  environment.yml  mrl.code-workspace  pull.sh  pyproject.toml  requirements-dev.txt  requirements-problematic.txt  requirements.txt  setup.py  slurm-collect-trajs.sh  slurm-policy-train.sh  start_redis.sh
mrl/: aligned_reward_set.py  collect_trajs.py  configs.py  folders.py  important_comparisons.py  learn_q.py  learn_values.py  memprof-miner.py  memprof.py  ob_fixes.py  offline_buffer.py  online_batcher.py  plot.py  posterior.py  preferences.py  random_policy.py  replay.py  reward_model.py  rewards.py  run_experiment.py  run_human_experiment.py  run_sim_experiment.py  scratch.ipynb  sphere.py  strict_converter.py  train_oracles.py  util.py  utils.py  volume_experiment.py  writer.py
mrl/aligned_rewards/: __init__.py  aligned_reward_set.py  make_ars.py
mrl/dataset/: collect_trajs.py  gym3.md  human_responses.py  lint_trajs.py  offline_buffer.py  preferences.py  roller.py  sars_dataset.py  trajectories.py  trajectory_db.py
mrl/envs/: __init__.py  feature_envs.py  gym3_util.py  maze.py  miner.py  probe_envs.py  rewards.py  util.py
mrl/experiment_db/: experiment.py
mrl/exploratory/: arp_distances.py  ars.ipynb  check_trajs_for_win.py  important_comparisons.py  miner_reset.py  miner_traj_length.py  overlap.py  why_are_trajs_bad.ipynb
mrl/inference/: analysis.py  plots.py  posterior.py  results.py  sphere.py
mrl/model_training/: learn_values.py  online_batcher.py  train_oracles.py  train_successor_features.py  writer.py
mrl/reward_model/: boltzmann.py  hinge.py  likelihood.py  logspace.py
scripts/: add_grid_shape_to_trajs.py  clean_prefs.py  convert_model.py  find_best_model.py  fix_dataset_names.py  fix_prefs.py  inference_analysis.ipynb  lint_trajs.py  plot.py  plot_training.py  results.ipynb  update_schema.py
tests/: model.jd  strategies.py  test_aligned_reward_set.py  test_dataset.py  test_dedup.py  test_experiment_db.py  test_folders.py  test_gen_trajs.py  test_maze.py  test_miner.py  test_preferences.py  test_q.py  test_results.py  test_reward_model.py  test_rollouts.py  test_util.py
